# CSU_Software_Engineering_Proj

./: .gitmodules  CMakeLists.txt  README.md  desktopclient.py
ArduinoCode/board/: board.ino
LEDPanelDesktopClient/: CMakeLists.txt  LEDPanelDesktopClient.cpp  LEDPanelDesktopClient.h  main.cpp
